--- a/styles/device.css
+++ b/styles/device.css
@@ -41,45 +41,68 @@
 }
 
 /*PAGS*/
-#home .me {display: block; margin-top: 5em;}
-#home .me div {float: right;}
-#home .me div h1 {color: var(--cl-alt);}
-#home .me div h1:nth-child(1) {
-    text-align: end; 
-    font-size: 32px;
-    text-transform: uppercase;
+.home .home-content {
+    width: 100%;
+    height: 100%;
 }
-#home .me div h1:nth-child(2) {
-    text-align: end; 
-    font-size: 2.5em; 
-    font-weight: 900;
-    text-transform: uppercase;
+.home .less-me {
+    text-align: left;
+    text-transform: capitalize;
+    color: var(--text-color-def);
+    margin-left: 100px;
 }
-#home .me div p {text-align: end;}
-#home .me div button {
-    width: 140px;
-    padding: 10px;
-    outline: none;
-    border: 1px solid var(--cl-alt);
-    border-radius: 12px;
-    margin-top: 5em;
+.home .less-me h3 {
+    font-size: 18pt;
+    letter-spacing: 2.5px;
+}
+.home .less-me .text1 {
+    font-size: 2em;
+    line-height: 60px;
+    letter-spacing: 3px;
+}
+.home .less-me h1 span {
+    font-size: 1.5em;
+    color: var(--text-color-onn);
+}
+.home .less-me .text2 {
+    margin-top: 10px;
+    margin-left: 10px;
+    letter-spacing: 2.5px;
+}
+.home .less-me button {
+    width: 200px;
+    height: 50px;
+    margin-top: 50px;
+    margin-right: 20px;
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
+    transition: letter-spacing .5s;
     cursor: pointer;
 }
-#home .me div button:nth-child(4) {
-    color: var(--cl-alt);
-    background: var(--bg-def);
-    letter-spacing: ;
+.home .less-me button:nth-child(1) {
+    outline: none;
+    color: var(--text-color-aux);
+    background: var(--back-color-aux);
 }
-#home .me div button:nth-child(5) {
-    color: var(--cl-alt);
+.home .less-me button:nth-child(1):hover {
+    letter-spacing: 3px;
 }
-#home .me div p {
-    color: var(--cl-alt); 
-    letter-spacing: 7.5px;
-    text-transform: capitalize;
+.home .less-me button:nth-child(2) {
+    outline: none;
+    background: transparent;
+    color: var(--text-color-def);
+    border: 1px solid var(--back-color-aux);
+}
+.home .less-me button:nth-child(2):hover {
+    letter-spacing: 3px;
 }
 
-#home .sc-links div {float: right;}
+.home .socials {
+    display: none;
+}
+
+
+
 #home .sc-links div span {margin-left: 20px; cursor: pointer;}
 #home .sc-links div span i {color: #37373D;}
 #home .sc-links div span:hover i {color: var(--cl-alt);}
