--- a/styles/global.css
+++ b/styles/global.css
@@ -36,11 +36,22 @@ body {
     width: 100%;
     height: 80px;
     z-index: 999;
+    background: rgba(0, 0, 0, .5);
+    backdrop-filter: blur(15px);
 }
-.section {
-    display: none;
+.sections {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
 }
-
+.sections .section {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+} 
 
 /* classes custom */
 .space-start {
